[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyquillmark"
version = "0.1.0"
description = "Python bindings for Quillmark - a template rendering engine"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Quillmark Contributors" }
]
keywords = ["template", "rendering", "quillmark"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nibsbin/quillmark-py"
Repository = "https://github.com/nibsbin/quillmark-py"

[tool.maturin]
python-source = "python"
module-name = "pyquillmark._core"
